2010-09-30  David Levin  <levin@chromium.org>

        Reviewed by Darin Adler.

        Add guideline for constructors doing implicit type conversion to coding style.
        https://bugs.webkit.org/show_bug.cgi?id=47646

        * coding/coding-style.html:

2010-10-01  Alex Mathews  <possessedpenguinbob@gmail.com>

        Reviewed by Simon Fraser.

        Bug 47013 - Main Web Inspector link on webkit.org links to old wiki page
        https://bugs.webkit.org/show_bug.cgi?id=47013

        * nav.inc: Removed the space from the web inspector wiki link.

2010-09-22  Balazs Kelemen  <kbalazs@webkit.org>

        Unreviewed HTML syntax fix for my recent change in the coding-style.

        * coding/coding-style.html: Change "&gt" and "&lt" to "&gt;" and "&lt;".

2010-09-22  Balazs Kelemen  <kb@inf.u-szeged.hu>

        Reviewed by Darin Adler.

        check-webkit-style and the coding style guidelines page are inconsistent
        https://bugs.webkit.org/show_bug.cgi?id=46099

        * coding/coding-style.html:
        Making clear that includes of system headers must come after includes of other headers.

2010-09-16  Tony Gentilcore  <tonyg@chromium.org>

        Reviewed by Adam Barth.

        Adding a timeline screenshot for blocking and defer scripts
        https://bugs.webkit.org/show_bug.cgi?id=45933

        * blog-files/timeline-blocking-script.png: Added.
        * blog-files/timeline-defer-script.png: Added.

2010-09-14  Jessie Berlin  <jberlin@apple.com>

        Reviewed by Adam Roben.

        Exceptions are getting ignored on 64-bit Windows in the Web Process.
        https://bugs.webkit.org/show_bug.cgi?id=45779

        * building/tools.html:
        Add instructions about how to optionally get hotfix 976038.

2010-09-06  Robin Qiu  <robin.qiu@torchmobile.com.cn>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=43982
        This js file seems to be a popular script for detecting mobile WebKit but