@@ -58,6 +58,11 @@ Keep all the default options and click <b>Next</b> until the file is extracted a
 <li><p>Install QuickTime SDK</p>
 <p>Download QuickTime SDK for Windows from <a href="http://developer.apple.com/quicktime/download/">http://developer.apple.com/quicktime/download/</a> and install it to the default location (\Program Files\QuickTime SDK). This is needed for media support.
 
+<li><p>Install DirectX SDK</p>
+<p>Download the <a href="http://msdn.microsoft.com/en-us/directx/default.aspx">DirectX SDK</a>.  This is needed for accelerated compositing on Windows.</p>
+<p> Verify MSVC|Tools|Options|Projects and Solutions|VC++ Directories has Include: <code>$(DXSDK_DIR)include</code> and Lib: <code>$(DXSDK_DIR)lib</code> 
+</p>
+
 <li><p>Optional: Install the 32-bit version of Debugging Tools for Windows</p>
 <p>Debugging Tools for Windows includes many useful debugging tools such as WinDbg and NTSD. Some of WebKit&rsquo;s tests and scripts use these tools. Follow the <a target="installtools" href="http://www.microsoft.com/whdc/devtools/debugging/installx86.mspx#b">instructions for installing the 32-bit version of Debugging Tools for Windows</a>.</p>
 <li><p>Optional: Hotfix for 64-bit Windows to disable the user-mode callback filter for exceptions</p>
