@@ -1,3 +1,12 @@
+2010-10-19  Jenn Braithwaite  <jennb@chromium.org>
+
+        Reviewed by David Levin.
+
+        Add DirectX SDK to Installing Developer Tools web page
+        https://bugs.webkit.org/show_bug.cgi?id=47911
+
+        * building/tools.html:
+
 2010-09-30  David Levin  <levin@chromium.org>
 
         Reviewed by Darin Adler.
